@@ -1,3 +1,10 @@
+2999-02-11  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 523742 – Use noinst for non-installable libraries
+
+	* tests/Makefile.am: use noninst_LTLIBRARIES for noninstalled 
+	libraries.Patch by Björn Lindqvist
+
 2009-02-06  Murray Cumming  <murrayc@murrayc.com>
 
 	* gio/gfilterinputstream.c:
